# crab_book

./: .gitignore  README.md
chapter_11/trait_someting/: Cargo.toml  file2.txt  hashmap.txt
chapter_11/trait_someting/src/: main.rs
chapter_19/mandelbrot_rayon/: Cargo.toml  README.md
chapter_19/mandelbrot_rayon/src/: main.rs
chapter_2/function/src/: main.rs
chapter_2/mandelbrot/: Cargo.toml  README.md
chapter_2/mandelbrot/src/: main.rs
chapter_2/mandelbrot_multi_threads/: Cargo.toml
chapter_2/mandelbrot_multi_threads/src/: main.rs
chapter_2/op_file/: Cargo.toml
chapter_2/quickreplace/: Cargo.toml  Copy.toml
chapter_2/quickreplace/src/: main.rs
chapter_2/web_server/: Cargo.toml
chapter_2/web_server/src/: main.rs
chapter_3/vector_str/: Cargo.toml
chapter_3/vector_str/src/: main.rs
chapter_4/copyright/: Cargo.toml
chapter_4/copyright/src/: main.rs
chapter_5/borrow/src/: main.rs
chapter_8/call_lib/: README.md
chapter_8/call_lib/call_cpp/: Cargo.toml
chapter_8/call_lib/call_cpp/src/: buildaaa.rs  main.rs
chapter_8/call_lib/call_lib/: Cargo.toml
chapter_8/call_lib/call_lib/src/: main.rs
chapter_8/call_lib/call_static_lib/: Cargo.toml
chapter_8/call_lib/call_static_lib/src/: buildsas.rs  main.rs
chapter_8/call_lib/cpp_lib/: CMakeLists.txt
chapter_8/call_lib/cpp_lib/inlcude/: cpplib.hpp
chapter_8/call_lib/cpp_lib/src/: cpplib.cpp
chapter_8/call_lib/lib_demo/: Cargo.toml
chapter_8/call_lib/lib_demo/src/: lib.rs
